--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 01 05:49:47 CAT 2022
-sdk.dir=C\:\\Users\\phila\\AppData\\Local\\Android\\Sdk
+#Sat Dec 03 02:54:31 CAT 2022
+sdk.dir=C\:\\Users\\ntobeko dindi\\AppData\\Local\\Android\\Sdk
