--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,18 +17,16 @@
         android:theme="@style/Theme.ConfManagement"
         tools:targetApi="31">
         <activity
-            android:name=".AuthActivity"
-            android:exported="false"
-            android:label="@string/title_activity_auth"
-            android:theme="@style/Theme.ConfManagement.NoActionBar">
+            android:name=".PdfViewerActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ConferenceSpeakersActivity"
+            android:name=".AuthActivity"
             android:exported="false"
-            android:label="@string/title_activity_conference_speakers"
+            android:label="@string/title_activity_auth"
             android:theme="@style/Theme.ConfManagement.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
